使用load加载页面 去除layout 修复一些bug

--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\InRecord\Index.cshtml" />
     <Content Include="Views\OutRecord\Index.cshtml" />
+    <Content Include="Views\Home\test.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
