初步实现按workCell 显示 数据

--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\FixtureDefinition.cs" />
+    <Compile Include="Models\FixtureDefinitionContext.cs" />
     <Compile Include="Models\FixtureEntity.cs" />
     <Compile Include="Models\FixtureEntityContext.cs" />
     <Compile Include="Models\FixtureInRecord.cs" />
@@ -233,6 +235,8 @@
     <Compile Include="Models\FixtureOutRecordContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserContext.cs" />
+    <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Models\UserInfoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -293,10 +297,9 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\InRecord\Index.cshtml" />
     <Content Include="Views\OutRecord\Index.cshtml" />
+    <Content Include="Views\FixtureEntity\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\FixtureEntity\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
