--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Autofac" version="5.1.2" targetFramework="net472" />
+  <package id="Autofac.Mvc5" version="5.0.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
@@ -22,6 +24,7 @@
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Rewrite" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
@@ -45,7 +48,8 @@
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
