--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -248,8 +248,6 @@
     <Compile Include="Models\FixtureOutRecordContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserContext.cs" />
-    <Compile Include="Models\UserInfo.cs" />
-    <Compile Include="Models\UserInfoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -311,7 +309,9 @@
     <Content Include="Views\OutRecord\Index.cshtml" />
     <Content Include="Views\FixtureEntity\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
