--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,8 @@
   <package id="Autofac" version="5.1.2" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="5.0.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
-  <package id="EntityFramework" version="6.1.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -41,11 +42,16 @@
   <package id="Microsoft.Owin.Security.Google" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="MiniProfiler" version="4.1.0" targetFramework="net472" />
+  <package id="MiniProfiler.EF6" version="4.1.0" targetFramework="net472" />
+  <package id="MiniProfiler.Mvc5" version="4.1.0" targetFramework="net472" />
+  <package id="MiniProfiler.Shared" version="4.1.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
