--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -332,6 +332,7 @@
     <Content Include="Scripts\common.bootstraptable.init.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\common.form.validate.js" />
+    <Content Include="Scripts\diy-treeview.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
