Content 删除 多余 css common.bootstraptable.init.js 增加 通用 js 函数

--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -291,28 +291,11 @@
     <Content Include="Content\fontawesome\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\icomoon.svg" />
     <Content Include="Content\image\bg.jpg" />
-    <Content Include="Content\image\main_bg.png" />
     <Content Include="Content\image\InOut.png" />
-    <Content Include="Content\img\2.png" />
-    <Content Include="Content\img\loading.gif" />
+    <Content Include="Content\image\main_bg.png" />
     <Content Include="Content\Layout.css" />
     <Content Include="Content\Login.css" />
     <Content Include="Content\style.css" />
-    <Content Include="Content\zTreeStyle\img\diy\1_close.png" />
-    <Content Include="Content\zTreeStyle\img\diy\1_open.png" />
-    <Content Include="Content\zTreeStyle\img\diy\2.png" />
-    <Content Include="Content\zTreeStyle\img\diy\3.png" />
-    <Content Include="Content\zTreeStyle\img\diy\4.png" />
-    <Content Include="Content\zTreeStyle\img\diy\5.png" />
-    <Content Include="Content\zTreeStyle\img\diy\6.png" />
-    <Content Include="Content\zTreeStyle\img\diy\7.png" />
-    <Content Include="Content\zTreeStyle\img\diy\8.png" />
-    <Content Include="Content\zTreeStyle\img\diy\9.png" />
-    <Content Include="Content\zTreeStyle\img\line_conn.gif" />
-    <Content Include="Content\zTreeStyle\img\loading.gif" />
-    <Content Include="Content\zTreeStyle\img\zTreeStandard.gif" />
-    <Content Include="Content\zTreeStyle\img\zTreeStandard.png" />
-    <Content Include="Content\zTreeStyle\zTreeStyle.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -330,6 +313,7 @@
     <Content Include="Scripts\common.bootstraptable.init.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\common.form.validate.js" />
+    <Content Include="Scripts\common.toastr.init.js" />
     <Content Include="Scripts\diy-treeview.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
