实现行内编辑 修改实现 一个用户 可以在 多个部门 拥有多个角色  多 部门 已测试 多角色暂未测试

--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -244,10 +244,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Common\CurrentUserWorkCell.cs" />
+    <Compile Include="Common\InOutEditRecord.cs" />
     <Compile Include="Common\ItemID.cs" />
     <Compile Include="Controllers\ManagerFamilyController.cs" />
     <Compile Include="filter\UserFilter.cs" />
     <Compile Include="Models\FixtureFamily.cs" />
+    <Compile Include="Models\UserWorkCell.cs" />
+    <Compile Include="Models\WorkCell.cs" />
     <Compile Include="ViewModels\MenuTreeViewModel.cs" />
     <Compile Include="Models\MenuNode.cs" />
     <Compile Include="Controllers\FixtureEntityController.cs" />
